--- a/file/style.css
+++ b/file/style.css
@@ -121,28 +121,35 @@ section{
 
 section:nth-of-type(1){
     grid-area: a;
-    background-color: rgb(226, 83, 17);
-
+    /* background-color: rgb(226, 83, 17); */
+    background: linear-gradient(90deg, white 50%, green 50%);
 
 }
 section:nth-of-type(2){
     grid-area: b;
+    background-color: aqua;
+    background: radial-gradient(red 30%, white 15%);
     
 }
 section:nth-of-type(3){
     grid-area: c;
+    background: linear-gradient(90deg, blue 33%, white 33%, white 66%, red 33%);
     
 }
 section:nth-of-type(4){
     grid-area: d;
+    background: linear-gradient(black 35%, red 30%, red 65%, yellow 30%);
     
 }
 section:nth-of-type(5){
     grid-area: e;
+    background: linear-gradient(90deg, green 33%, white 33%, white 66%, green 33%);
 
 }
 section:nth-of-type(6){
     grid-area: f;
+    background-color: blanchedalmond;
+    background: repeating-radial-gradient(red 10%, white 12%);
     
 }
 section:nth-of-type(7){
